# SpaceFort

./: .gitignore  Cargo.toml  README.md
fluff/: TODO  TODO.md  tests.md
src/: lib.rs  main.rs  map.txt  out.txt
src/entities/: actions.rs  creatures.rs  entity.rs  interact.rs  mod.rs  pathfind.rs  pathfinding.rs  utils.rs
src/game/: base.rs  client.rs  mod.rs  server.rs  term_client.rs
src/io/: base.rs  colors.rs  constants.rs  mod.rs  term.rs  textures.rs  tiles.rs  utils.rs
src/map/: constants.rs  material.rs  mod.rs  tiles.rs
src/net/: base.rs  client.rs  mod.rs  server.rs
src/objects/: buildings.rs
static/inc/creatures/: creatures.toml
static/inc/maps/: arena.sfm  smol_map.sfm  test_map.sfm
static/inc/materials/: materials.toml
static/inc/things/: creatures.toml
tests/: integration.rs  load_save.rs
