[package]
name = "spacefort"
version = "0.2.0"
authors = ["rusch <rusch@mit.edu>"]

[dependencies]
bincode = "0.9"
clippy = {version = "*", optional = true}
log = "0.3"
env_logger = "*"
ncurses = {version = "*", optional = true}
ordered-float = "0.5.0"
pathfinding = ">=0.1"
piston = ">=0.32"
piston_window = "0.74.0"
piston2d-graphics = ">=0.21"
pistoncore-glutin_window = ">=0.37"
piston2d-opengl_graphics = ">=0.44"
rand = ">=0.3"
regex = ">=0.1"
serde = ">=1.0"
serde_derive = ">=1.0"
toml = ">=0.4"

[features]
default = []
term = ["ncurses"]
